--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -75,14 +75,36 @@
         android:minHeight="48dp"
         />
 
-    <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/welcome_BTN_start"
-        android:layout_width="125dp"
-        android:layout_height="125dp"
-        android:layout_centerHorizontal="true"
+
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/main_LL_attempts_score"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:layout_marginTop="64dp"
-        app:srcCompat="@drawable/start"
         android:layout_below="@+id/welcome_EDT_email"
-        />
+        >
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/welcome_BTN_signup"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:text="Sign Up" />
+
+        <View
+            android:layout_width="32dp"
+            android:layout_height="0dp"/>
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/welcome_BTN_login"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="32dp"
+            android:text="Log In" />
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
 
 </RelativeLayout>
